<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="menu">Menu</string>
    <string name="description_post_author_avatar">Netology</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="views">Amount of views</string>
    <string name="remove_post_action">Remove</string>
    <string name="edit_post_action">Edit</string>
    <string name="post_content_hint">Post content</string>
    <string name="edit_title">Edit content</string>
    <string name="cancel_edit_content">Cancel edit content</string>
    <string name="save_post">Save post</string>
    <string name="error_empty_content">Text not found</string>
    <string name="save_content">Save content</string>
    <string name="new_content">New Post</string>
    <string name="video_link">Video link</string>
    <string name="chooser_share_post">Share post</string>
    <string name="watch_video">Watch video</string>
    <string name="channel_likes_name">Notifications about likes</string>
    <string name="channel_new_posts_name">Notifications about new posts</string>
    <string name="channel_push_token_name">Push notifications</string>
    <string name="channel_likes_description">Notifications from remote server about likes</string>
    <string name="channel_new_posts_description">Notifications from remote server about new posts</string>
    <string name="channel_push_token_description">Push notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post_added">User %1$s posted a new post</string>
    <string name="error_loading">Loading error. There is no internet connection</string>
    <string name="retry_loading">Retry loading</string>
    <string name="empty_posts">There are no posts. If you create a new post, it will appear here.</string>
    <string name="server_error_message">There was an error connecting to the server. \n Please check your internet connection settings \n or try again later.</string>
    <string name="ok_button">OK</string>
    <string name="new_posts_message">There are new posts</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="description_save_photo">Save photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login:</string>
    <string name="enter_login">Enter login</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_user_name">Enter your name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_filling_forms">Please fill all forms</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>

</resources>